# IP-Prefixes

./: CMakeLists.txt  IPv4PrefixSet.cpp  README.md  build_and_run.bat  main.cpp  run_tests.bat
include/: IPnode.hpp  IPv4PrefixSet.hpp
src/: IPv4PrefixSet.cpp  main.cpp  tests.cpp
